# backend/internal/models/transaction.go
@@ -6,18 +6,21 @@ import "time"
 type Transaction struct {
 	ID              string    `json:"id"`
 	UserID          string    `json:"user_id"`
-	CategoryID      string    `json:category_id`
-	Amount          float64   `json:"amount`
-	Description     string    `json:"description`
+	CategoryID      string    `json:"category_id"`
+	Amount          float64   `json:"amount"`
+	Currency        string    `json:"currency"`
+	Description     string    `json:"description"`
 	ReceiptURL      string    `json:"receipt_url"`
 	TransactionDate string    `json:"transaction_date"`
-	CreatedAt       time.Time `json:`
+	CreatedAt       time.Time `json:"created_at"`
 }
 
 // Represent the payload sent from client
 type TransactionInput struct {
+	ID              string `json:"id"`
 	CategoryID      string `json:"category_id"`
 	Amount          string `json:"amount"`
+	Currency        string `json:"currency"`
 	Description     string `json:"description"`
 	ReceiptURL      string `json:"receipt_url"`
 	TransactionDate string `json:"transaction_date"`
