# backend/internal/models/user.go
@@ -4,14 +4,21 @@ import "time"
 
 // User table
 type User struct {
-	ID           string    `json:"id"`
-	Email        string    `json:"email"`
-	PasswordHash string    `json:"-"`
-	CreatedAt    time.Time `json:"created_at"`
+	ID                   string     `json:"id"`
+	Username             *string    `json:"username"`
+	Email                string     `json:"email"`
+	PasswordHash         string     `json:"-"`
+	EmailVerified        bool       `json:"email_verified"`
+	VerificationToken    *string    `json:"-"`
+	ResetPasswordToken   *string    `json:"-"`
+	ResetPasswordExpires *time.Time `json:"-"`
+	CreatedAt            time.Time  `json:"created_at"`
 }
 
 // AuthInput represent json payload
 type AuthInput struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
+	Username        string `json:"username,omitempty"`
+	Email           string `json:"email,omitempty"`
+	Password        string `json:"password"`
+	UsernameOrEmail string `json:"username_or_email,omitempty"`
 }
